fixes quick flash of top navigation, and some temporary spacing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,3 +14,8 @@
     }
 }
 
+#top-navigation {
+    height: 700px;
+    margin-top: -700px;
+}
+
